# dektop-uma-ocr

./: .gitignore  CLAUDE.md  DATA_ATTRIBUTION.md  README.md  events.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
